--- a/config.toml
+++ b/config.toml
@@ -46,10 +46,10 @@ canonifyUrls = true
 	[params.about]
 		headline    = "VanHooseDotWork"
 		profilePicture = "IMG_4585.jpg"
-		description = "Hi! My name is Katherine and I am an American currently based in Utrecht, the Netherlands. I am a designer and researcher with a passion for cities. I believe that when the structured and analytical methods of social science are combined with the creative power of design, powerful solutions to seemingly complex issues in the built environment can be reached. This approach combines communication, graphic and analytical skills, which I have developed over the past six years in both professional and academic contexts. I have found this approach to be valuable on a number of scales and for a variety of projects. For an idea of what this approach can mean for you, please see [the services](#services) below or some of [my work](#portfolio). Let's get in touch!"
+		description = "Hi! My name is Katherine and I am an American currently based in Utrecht, the Netherlands. I am a designer and researcher with a passion for cities. I combine the structured methods of social science with the creativity of design in projects related to the built environment. This approach includes communication, graphic and analytical skills, which I have developed over the past six years in both professional and academic contexts. I have found this approach to be valuable on a number of scales and for a variety of projects. For an idea of what this approach can mean for you, please see [the services](#services) below or some of [my work](#portfolio). Let's get in touch!"
 
 		buttonText  = "Download CV"
-		buttonUrl = 'https://www.dropbox.com/s/svune2r4y24jr8f/VanHoose_CV.pdf/?raw=1'
+		buttonUrl = 'https://www.dropbox.com/s/ny8vo1fpan1j9df/VanHoose_CV.pdf/?raw=1'
 
 	# Service section
 	[params.services]
@@ -63,11 +63,11 @@ canonifyUrls = true
 		[[params.services.list]]
             icon = "fa-lightbulb-o"
             title = "Consulting"
-            description = "I have collaborated on a number of projects that involve researching complex issues found in the built enironment. My method of work is hands on: researching and defining the problem, organizing and communicating with multiple parties, searching for feasable and reasonable solutions and circulating results."
+            description = "I have collaborated on a number of projects that involve researching complex issues found in the built environment. My method of work is hands on: researching and defining the problem, organizing and communicating with multiple parties, searching for feasable and reasonable solutions and circulating results."
         [[params.services.list]]
 			icon = "fa-pencil"
 			title = "Designing"
-			description = "As a trained designer, I understand the importance (and advantage) of presenting material in a visually appealing way. My experience lies in the creation of maps, communcative diagrams and layout design. Let’s think together to find the best way to present your work."
+			description = "As a trained designer, I understand the importance (and advantage) of presenting material in a visually appealing way. My experience lies in the creation of maps, communicative diagrams and layout design. Let’s think together to find the best way to present your work."
 
     # Portfolio modals
 	[params.portfolio.modal]
