--- a/data/projects/2014-07-10-project-6.yaml
+++ b/data/projects/2014-07-10-project-6.yaml
@@ -3,6 +3,6 @@ title: From Protective Economy to Free Market
 date: August 2013
 thumbnail: thumbnails/IMG_2567.jpg
 img: IMG_2573.jpg
-collaborator: Vereniging Deltametropool
+collaborator: Deltametropolis Association
 category: Economy
-description: "Short research analyzing the historical relationship between EU agricultural policies and Dutch spatial policies."
+description: "Recents cuts to agriculture subsidy have left farmers and their holdings in the wake of a speeding policy boat. With this 'mini' research, I analyzed the correlation between EU agricultural policies and Dutch spatial planning since 1950 to understand the implications of this relationship on the future of Dutch rural areas. Research resulting in a fact sheet of text and infographics."
