--- a/data/projects/2014-07-10-project-6.yaml
+++ b/data/projects/2014-07-10-project-6.yaml
@@ -1,8 +1,8 @@
 modalID: 6
-title: From Protective Economy to Free Market
+title: Fact Sheet
 date: August 2013
 thumbnail: thumbnails/IMG_2567.jpg
 img: IMG_2573.jpg
 collaborator: Deltametropolis Association
 category: Economy
-description: "Recents cuts to agriculture subsidy have left farmers and their holdings in the wake of a speeding policy boat. With this 'mini' research, I analyzed the correlation between EU agricultural policies and Dutch spatial planning since 1950 to understand the implications of this relationship on the future of Dutch rural areas. Research resulting in a fact sheet of text and infographics."
+description: "**Project context:** A shift in both the economic and spatial planning model occurred, leaving farmers and their holdings in the wake of a speeding policy boat. After the economic crisis in 2008, EU policies began to propose cuts to agricultural subsidies and reforms to the Common Agricultural Policy. The trend will only continue into the coming years, as the EU announced less direct funding for agricultural projects, but rather an encouragement for young farmers to become more entrepreneurial.  **Approach:** Analyzed the correlation between EU agricultural policies and Dutch spatial planning since 1950 to understand the implications of this relationship on the future of Dutch rural areas. **Results and deliverables:** Fact sheet ['From Protective Economy to Free Market'](https://www.dropbox.com/s/08azm4iogbbz1de/201308_FactSheet_3.1_From-Protective-Economy-to-Free-Market%281%29.pdf/?raw=1) of with summary of findings and infographics."
