--- a/config.toml
+++ b/config.toml
@@ -84,6 +84,6 @@ canonifyUrls = true
 		phone = "+31 (0)6 38 32 68 78"
 		email = "kavanhoose@gmail.com"
 		twitter = "katevanhoose"
-		instagram = "64862844"
+		kvknumber = "64 86 28 44"
 		pictures = "Let's Talk About the Polders Again, Merten Nefs; (re) Making City, Magnus Lundqvist"
 
