--- a/data/projects/2014-07-08-project-5.yaml
+++ b/data/projects/2014-07-08-project-5.yaml
@@ -1,8 +1,8 @@
 modalID: 5
 title: (re) MAKING CITY
 date: May 2012
-thumbnail: thumbnails/exhibit.jpg
-img: GLINTstudios_AtomicCity_0106.jpg
+thumbnail: thumbnails/camera.jpg
+img: exhibit.jpg
 collaborator: "[Atomic Cities Research Group](http://filson-rohrbacher.com/portfolio/doe-strategy/)"
 category: "strategic regeneration"
 description: "**Project context:** The decommisioned Paducah Gaseous Diffusion Plant was orginally used for the enrichment of uranium. Currently a 10 square mile underground plume of contaminants sits under the site. With funding from the National Department of Energy, our research studio spent 36 months visualizing the contaminated area and creating a strategic vision for the future use of the plant **Challenge:** Determine the most effective way to consolidate and share the findings of the three-year research studio and organize  opening events in three different locations. **Approach:** Comunicated with multiple parties to determine the most effective way to display research and curated the content for a portable exhibition. Further responsible for organizing the exhibition opening in each location, as well as designing marketing materials. **Results and deliverables:** Portable exhibition which traveled from Paducah to Lexington, Kentucky and was also featured at the International Architecture Biennale in Rotterdam."
