--- a/data/projects/2014-07-05-project-1.yaml
+++ b/data/projects/2014-07-05-project-1.yaml
@@ -1,8 +1,8 @@
 modalID: 1
 title: "Let's Talk About the Polders Again"
 date: September 2012-September 2013
-thumbnail: thumbnails/IMG_4416.jpg
-img: IMG_2535.jpg
+thumbnail: thumbnails/polder.jpg
+img: IMG_4604.jpg
 collaborator: "[Deltametropolis Association](http://deltametropool.nl/nl/veenweidegebieden), Ministry of Infrastructure and the Environment"
 category: "urban landscape"
 description: "**Project context:** As the urban areas of the Netherlands continue to require high quality infrastructure, services and and access to housing, so will they demand an equally high quality surrounding rural area that ensures access to recreation, local food and green services. **Question:** What is the potential of the surrounding peatlands to match the needs of the Rotterdam-The Hague metropolitan area? **Approach:** Researched existing methods for measuring the economic, socio-cultural and historic value of green landscapes. Began with an analysis of one case study, the Zouteveensepolder including review of relevant policy documents, followed by interviews with experts and local residents, and ended with context and spatial analysis using geometric networks. **Results and deliverables:** Collected data organized into the end publication ['Let's Talk About the Polders Again'](https://www.dropbox.com/s/ff8wfogvycetsnl/20130918_Landschap_FinalReport_KatherineVanHoose%20%281%29.pdf/?raw=1) and used as a base for four other case study areas, which eventually included stakeholder workshops."
