--- a/data/projects/2014-07-07-project-3.yaml
+++ b/data/projects/2014-07-07-project-3.yaml
@@ -1,8 +1,8 @@
 modalID: 3
-title: "LiViNG Lombok"
+title: "LiviNG Lombok"
 date: January 2016
-thumbnail: thumbnails/IMG_4418.jpg
-img: LivingLombok_logo.png
+thumbnail: thumbnails/IMG_4891.jpg
+img: IMG_4418.jpg
 collaborator: Karin de Nijs
 category: "neighborhood regeneration"
-description: "**Project context:** Vacancy continues to be both a physical and social problem within today’s urban areas. Alongside the obvious 'waste' of phyiscal space, a large number of vacant premises in a small area gives an impression of forgottenness and lack of care, leading to deeper social issues, such as community degradation, feelings of discomfort and lack of local involvement. **Question:** What are the best solutions for approaching the issue of vacancy in the neighborhood Laan van Nieuw-Guinea in Utrecht? **Approach:** Created a catalogue of the empty buildings and an analysis of comparable successful cases ending with potential uses applicable in Laan van Nieuw-Guinea. In the second phase of the project, we will share this information with local owners, residents, and civil servants to create a platform where ideas and initiatives from the neighboorhood can be paired with the vacant propoerties. **Results and deliverables:** In process." 
+description: "**Project context:** Vacancy continues to be both a physical and social problem within today’s urban areas. Alongside the obvious 'waste' of phyiscal space, a large number of vacant premises in a small area gives an impression of forgottenness and lack of care, leading to deeper social issues, such as community degradation, feelings of discomfort and lack of local involvement. **Question:** What are the best solutions for approaching the issue of vacancy in the neighborhood Laan van Nieuw-Guinea in Utrecht? **Approach:** Created a catalogue of the empty buildings and an analysis of comparable successful cases ending with potential uses applicable in Laan van Nieuw-Guinea. In the second phase of the project, we will share this information with local owners, residents, and civil servants to create a platform where ideas and initiatives from the neighboorhood can be paired with the vacant propoerties. **Results and deliverables:** The first phase of the research has resulted in the report 'Leegstand in Lombok', which can be accessed upon request." 
