--- a/config.toml
+++ b/config.toml
@@ -85,7 +85,7 @@ canonifyUrls = true
 		headline = "Let's work together."
 		description = "VanHooseDotWork is always open to new collaborations and projects. If you would like to get a quote, learn a bit more about the services I offer, or grab a cup of coffee, feel free to contact me."
 		phone = "+31 (0)6 38 32 68 78"
-		email = "kavanhoose@gmail.com"
+		email = "katherine@vanhoose.work"
 		twitter = "katevanhoose"
 		kvknumber = "64 86 28 44"
 		pictures = "Let's Talk About the Polders Again, Merten Nefs; (re) Making City, Magnus Lundqvist"
